# oa-cli

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
dashboard-src/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-src/src/: App.tsx  i18n.ts  types.ts
dashboard-src/src/components/: GoalCard.tsx  GoalDetailSection.tsx  HealStrip.tsx  HealthSummaryStrip.tsx  MechanismView.tsx  SystemHealth.tsx  TokenPieChart.tsx  TraceFlowCard.tsx  TracesView.tsx
dashboard-src/src/hooks/: useOAData.ts
dashboard-src/src/styles/: index.css
scripts/: oa-auto-collect.sh  oa-collect.cmd  oa-full-cycle.cmd  oa-report.cmd  openclaw-cron-config.json
src/oa/: __init__.py  cli.py  feishu_reporter.py  heal.py  server.py
src/oa/actions/: __init__.py  conversation_quality_check.py  cost_analysis.py  cron_heal.py  gateway_guard.py  knowledge_tidy.py  memory_optimize.py  path_monitor.py  session_cleanup.py  skill_audit.py
src/oa/core/: __init__.py  config.py  scanner.py  schema.py  tracing.py
src/oa/dashboard/: index.html
src/oa/dashboard/assets/: index-24F0Q1bi.js  index-CC2FNnyz.js  index-DZZCHecY.js  index-DumN9abx.js  index-bwzX5xZ-.css  index-fghVNI6p.css
src/oa/pipelines/: __init__.py  base.py  conversation_quality.py  cron_reliability.py  heartbeat_bridge.py  infra_health.py  knowledge_growth.py  team_health.py  viking_activity.py
templates/: config.yaml  custom_pipeline.py
tests/: __init__.py  test_cli.py  test_config.py  test_dashboard.py  test_pipelines.py  test_scanner.py  test_schema.py  test_server.py  test_tracing.py
